# LitePolis-ui-particiapp

./: .gitignore  README.md  conftest.py  pyproject.toml
litepolis_ui_particiapp/: __init__.py  core.py
litepolis_ui_particiapp/static/: LICENSE  README.md  index.html  privacy.html
litepolis_ui_particiapp/static/scripts/: conversation.js  particiapi-client.js
litepolis_ui_particiapp/static/style/: base.css  branding.css  conversation.css
tests/: test_core.py
