[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litepolis-ui-particiapp"
version = "0.1.0"
description = "ParticiApp frontend UI module for LitePolis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/NewJerseyStyle/LitePolis-ui-particiapp"

[tool.setuptools.packages.find]
where = ["."]
include = ["litepolis_ui_particiapp*"]

[tool.setuptools.package-data]
"litepolis_ui_particiapp" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
